--- a/AnotherClient/src/main/resources/application.yml
+++ b/AnotherClient/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   application:
-    name: client-server
+    name: another-client
   config:
     import: optional:configserver:http://localhost:8888/
