--- a/AdminServer/src/main/resources/application.yml
+++ b/AdminServer/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   application:
-    name: client-server
+    name: admin-server
   config:
     import: optional:configserver:http://localhost:8888/
