--- a/ConfigServer/src/main/resources/application.yml
+++ b/ConfigServer/src/main/resources/application.yml
@@ -1,8 +1,23 @@
 server:
   port: 8888
 spring:
+  application:
+    name: config-server
   cloud:
     config:
       server:
         git:
           uri: https://gitlab.com/TahmkKillerB/config-server-springboot.git
+  boot:
+    admin:
+      client:
+        url: http://localhost:10001
+   
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: 'always'
