--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,12 @@
 image: docker:latest
 services:
-  - name: docker:dind
+  - name: docker:20-dind
+    alias: docker
     command: ["--tls=false"]
   
 variables:
-  DOCKER_DRIVER: overlay
-  DOCKER_HOST: tcp://127.0.0.1:2375/
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: tcp://docker:2375 
   DOCKER_TLS_CERTDIR: ""
 
 
@@ -25,8 +26,9 @@ maven-build:
 
 docker-build:
   stage: publish
-  script:
+  before_script:
     - docker login -u ${DOCKER_USER} -p ${DOCKER_PWD}
+  script:
     - export IMAGE_NAME="medez/config-server"
     - docker build -t ${IMAGE_NAME}:${IMAGE_TAG} .
     - docker push ${IMAGE_NAME}:${IMAGE_TAG}
