--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,10 @@
 image: docker:latest
 services:
-  - name: docker:20-dind
-    alias: docker
-    command: ["--tls=false"]
+  - name: docker:dind
+    entrypoint: ["dockerd-entrypoint.sh", "--tls=false"]
   
 variables:
   DOCKER_DRIVER: overlay2
-  DOCKER_HOST: tcp://docker:2375 
   DOCKER_TLS_CERTDIR: ""
 
 
